# sg-taxi-analysis

./: .gitignore  .pre-commit-config.yaml  Consumer.ipynb  Consumer1.ipynb  Consumer2.ipynb  Producer.ipynb  README.md  Spark.ipynb  Untitled.ipynb  docker-compose.yml  get_taxi_data.ipynb  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
Dockerfile/: dagster.Dockerfile  development.Dockerfile  spark.Dockerfile
dagster_service/: pyproject.toml  requirements.txt
dagster_service/data_pipeline/: __init__.py
dagster_service/data_pipeline/assets/consumers/: consumer.py  taxi_availability_consumer.py
dagster_service/data_pipeline/assets/producer/: taxi_availability_api.py  taxi_availability_producer.py
dagster_service/data_pipeline/assets/producer/taxi_availability/: api.py  producer.py
dagster_service/data_pipeline/assets/producers/: producer.py  taxi_availability_api.py  taxi_availability_producer.py
data_engineering/: __init__.py
data_engineering/assets/taxi_availability/: bronze.py
sg_taxi_data/: api.py  model.py
spark_service/: spark-defaults.conf
